--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
   </nav>
   <div class="skew-c-top"></div>
   <div class="topBtm-block top-block">
-    <p class="typewriterFont line anim-typewriter">save the fruit.</p>
-    <p class="typewriterFont line-2 anim-typewriter-2">save the planet.</p>
-    <a class="fade-in arrowBtn btn-danger" href="#middle">
-      <img class="arrowImg" src="images/down-arrow.png" alt="">
-    </a>
+    <div style="margin-top: 60px;" class="intro-block">
+      <p class="typewriterFont line anim-typewriter">save the fruit.</p>
+      <p class=" line-2 anim-typewriter-2">save the planet.</p>
+      <a class="fade-in arrowBtn btn-danger" href="#middle">
+        <img class="arrowImg" src="images/down-arrow.png" alt="">
+      </a>
+    </div>
   </div>
   <div class="skew-cc"></div>
   <div id="middle"  class="middle-block">
