--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
       </h3>
       <p class="paragraph-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit lectus, porta id diam ac, feugiat interdum nisi. Pellentesque ut arcu eu lectus ultricies rhoncus et id justo. Suspendisse luctus molestie risus sit amet euismod. Nunc et leo quis est semper auctor. Nulla quis lectus ullamcorper ipsum rutrum blandit. Nam felis lorem, bibendum ut lectus ac, iaculis consectetur nisl. Aenean mi lorem, molestie id purus eu, feugiat vulputate est. Ut sed laoreet tortor. Proin sed augue vestibulum, condimentum nulla in, varius dui.</p>
     </div>
-    <div style="margin-top: 50px;" class="h2Container">
-      <a href="about.html">
-        <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">Läs mer om oss här.</h2>
-      </a>
+    <div style="margin-top: 50px; " class="h2Container">
+      <div class="h2TextContainer">
+        <a href="about.html">
+          <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">Läs mer om oss här.</h2>
+        </a>
+      </div>
     </div>
 
 
@@ -96,7 +98,7 @@
   <div class="skew-c"></div>
   <div class="topBtm-block topBtm-block-produkter">
 
-    <div style="margin-bottom: 20px;" class="h2Container">
+    <div style="margin-bottom: 20px;margin-left:0; padding-left: 0;" class="h2Container">
       <img class="arrow-text" src="images/drawnarrow-text-1.png" alt="">
       <a href="products.html">
         <h2 class="h2TextBlock">Våra Produkter.</h2>
