--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
       </a>
     </div>
   </nav>
-  <div class="skew-c-top"></div>
+  <div style="visibility: hidden;" class="skew-c-top"></div>
   <div class="topBtm-block top-block">
     <div style="margin-top: 60px;" class="intro-block">
       <p class="typewriterFont line anim-typewriter">save the fruit.</p>
       <p class=" line-2 anim-typewriter-2">save the planet.</p>
-      <a class="fade-in arrowBtn btn-danger" href="#middle">
+      <!-- <a class="fade-in arrowBtn btn-danger" href="#middle">
         <img class="arrowImg" src="images/down-arrow.png" alt="">
-      </a>
+      </a> -->
     </div>
   </div>
   <div class="skew-cc"></div>
@@ -79,10 +79,10 @@
       </h3>
       <p class="paragraph-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit lectus, porta id diam ac, feugiat interdum nisi. Pellentesque ut arcu eu lectus ultricies rhoncus et id justo. Suspendisse luctus molestie risus sit amet euismod. Nunc et leo quis est semper auctor. Nulla quis lectus ullamcorper ipsum rutrum blandit. Nam felis lorem, bibendum ut lectus ac, iaculis consectetur nisl. Aenean mi lorem, molestie id purus eu, feugiat vulputate est. Ut sed laoreet tortor. Proin sed augue vestibulum, condimentum nulla in, varius dui.</p>
     </div>
-    <div style="margin-top: 50px; " class="h2Container">
+    <div style="margin-top: 50px; " class="fade-in h2Container-läsmer">
       <div class="h2TextContainer">
         <a href="about.html">
-          <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">Läs mer om oss här.</h2>
+          <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">Läs mer om oss</h2>
         </a>
       </div>
     </div>
@@ -98,7 +98,7 @@
   <div class="skew-c"></div>
   <div class="topBtm-block topBtm-block-produkter">
 
-    <div style="margin-bottom: 20px;margin-left:0; padding-left: 0;" class="h2Container">
+    <div style="margin-bottom: 50px;margin-left:0; padding-left: 0;" class="h2Container">
       <img class="arrow-text" src="images/drawnarrow-text-1.png" alt="">
       <a href="products.html">
         <h2 class="h2TextBlock">Våra Produkter.</h2>
@@ -112,21 +112,21 @@
         <h2>Äppelmust</h2>
         <h3>Originalet</h3>
         <p>Musten producerar vi själva, på handplockade vildvuxna äpplen från Sveriges trädgårdar som vi sedan försluter i glasflaskor på trettiotre centiliter.</p>
-        <p><a class="btn btn-danger" href="product-1.html" role="button">Mer information &raquo;</a></p>
+        <p><a class="merInfoBtn-produkt btn btn-danger" href="product-1.html" role="button">Mer information &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="text-center col-lg-4">
         <img class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
         <h2>Äppelmust</h2>
         <h3>Med en touch av kanel</h3>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.Etiam porta sem malesuada magna mollis euismod.</p>
-        <p><a class="btn btn-danger" href="#" role="button">Mer information &raquo;</a></p>
+        <p><a class="merInfoBtn-produkt btn btn-danger" href="product-2.html" role="button">Mer information &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="text-center col-lg-4">
       <img class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
       <h2>Äppelmust</h2>
       <h3>Originalet i bag-in-box</h3>
         <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.Etiam porta sem malesuada magna mollis euismod.</p>
-        <p><a class="btn btn-danger" href="#" role="button">Mer information &raquo;</a></p>
+        <p><a class="merInfoBtn-produkt btn btn-danger" href="product-3.html" role="button">Mer information &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -140,9 +140,13 @@
 
 
   <div class="footer">
+    <!-- <div class="mailBoxContainer">
+      <p class="mailBoxText">E-post: info.itsamust@gmail.com</p>
+      <a class="mailBoxATAG" href="mailto: info.itsamust@gmail.com">Skriv till oss</a> -->
+    <!-- </div> -->
     <ul class="ul-footer">
       <li id="foot-item-1" class="li-footer">
-        <a class="a-footer" href="https://sv-se.facebook.com/">
+        <a class="a-footer" href="https://sv-se.facebook.com/" target="_blank">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -151,7 +155,7 @@
         </a>
       </li>
       <li id="foot-item-2" class="li-footer">
-        <a class="a-footer" href="https://www.instagram.com/?hl=sv">
+        <a class="a-footer" href="https://www.instagram.com/itsamust.uf/" target="_blank">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -159,8 +163,9 @@
           <i class="fab fa-instagram" aria-hidden="true"></i>
         </a>
       </li>
+
       <li id="foot-item-3" class="li-footer">
-        <a class="a-footer" href="mailto: info.itsamust@gmail.com">
+        <a class="mailATag a-footer" href="mailto: info.itsamust@gmail.com">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -188,6 +193,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="script.js" charset="utf-8"></script>
 </body>
 
 </html>
