--- a/product-1.html
+++ b/product-1.html
@@ -12,11 +12,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://api.playground.klarna.com/">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesAbout.css">
+  <link rel="stylesheet" type="text/css" href="css/styleProductsSpec.css">
 </head>
 <body class="homeBody">
-
-
-  <nav class="navbarContainer">
+  <nav style="z-index: 100;" class="navbarContainer">
     <!--MENU START-->
     <div id="headNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -56,89 +56,76 @@
       <span class="menuLine2"></span>
     </a> -->
     <div class="siteLogo">
-      <a href="#">
+      <a href="index.html">
         <img class="logo" src="images/logotyp-D4.png" alt="site-logo">
       </a>
     </div>
   </nav>
-  <div class="skew-c-top"></div>
+  <!-- CONTENT -->
+  <div  class="skew-c-top"></div>
   <div class="topBtm-block top-block">
-    <p class="typewriterFont line anim-typewriter">save the fruit.</p>
-    <p class="typewriterFont line-2 anim-typewriter-2">save the planet.</p>
-    <a class="fade-in arrowBtn" href="#middle">
-      <img class="arrowImg" src="images/down-arrow.png" alt="">
-    </a>
+    <div class="info-outer-container">
+      <div style="padding-bottom: 400px;" class="info-1 ">
+        <div class="info-container">
+          <header style="" class="">
+            <div class="">
+              <nav class="nav nav-masthead justify-content-center">
+                <a class="text-secondary nav-link" href="products.html"><em>⤺ Tillbaka</em></a>
+              </nav>
+            </div>
+          </header>
+          <div style="padding-bottom: 0; padding-top: 15px;" class="info-background-2">
+            <img class="product-image" src="images/etikettharmoniskuf.png" alt="">
+          </div>
+          <div class="product-info">
+            <header class="masthead mt-auto">
+              <div class="inner">
+                <nav class="nav nav-masthead justify-content-center">
+                  <p class="text-secondary nav-link active"><b><em>33cl flaska</em></b></p>
+                  <p class="text-secondary nav-link"><b>/</b></p>
+                  <p class="text-secondary nav-link "><b><em>100% räddad frukt</em></b></p>
+                </nav>
+              </div>
+            </header>
+            <header class="masthead mt-auto">
+              <div class="inner">
+                <nav class="nav nav-masthead justify-content-center">
+                  <a class="text-secondary nav-link active" href="#"><b>Originalet</b></a>
+                  <p class="text-secondary nav-link"><b>/</b></p>
+                  <a class="text-secondary nav-link" href="product-2.html">Juledition</a>
+                  <p class="text-secondary nav-link"><b>/</b></p>
+                  <a class="text-secondary nav-link" href="product-3.html">Bag-in-box</a>
+                </nav>
+              </div>
+            </header>
+          </div>
+        </div>
+        <div class="info-container">
+          <div class="info-background">
+            <h2>Äppelmust Originalet</h2>
+            <h3 style="font-size: 18px;">Rund och frisk smak av äpple.</h3>
+            <br>
+            <p style="font-size: 15px;">En läcker must gjort på 100% räddade äpplen. Perfekt för dig som vill släcka din törst eller enbart njuta av en god dryck. Ett nyttigare och godare alternativ istället för läsk. Denna produkt är enbart gjord på räddadfrukt från svenska trädgårdar och livsmedelsbutiker där frukten annars skulle slängas. </p>
+            <p style="font-size: 15px;">Du kan dricka denna underbart goda must med mycket gott samvete med kunskapen om att du hjälper till att minska fruktsvinnet.</p>
+            <br>
+            <div style="margin-top: 50px; " class="fade-in h2Container-läsmer">
+              <div class="h2TextContainer">
+                <a href="about.html">
+                  <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">KÖP</h2>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
+
   <div class="skew-cc"></div>
-  <div id="middle"  class="middle-block">
-    <div class="text-block fade-in">
-      <h3>
-        Vårat koncept.
-      </h3>
-      <p class="paragraph-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit lectus, porta id diam ac, feugiat interdum nisi. Pellentesque ut arcu eu lectus ultricies rhoncus et id justo. Suspendisse luctus molestie risus sit amet euismod. Nunc et leo quis est semper auctor. Nulla quis lectus ullamcorper ipsum rutrum blandit. Nam felis lorem, bibendum ut lectus ac, iaculis consectetur nisl. Aenean mi lorem, molestie id purus eu, feugiat vulputate est. Ut sed laoreet tortor. Proin sed augue vestibulum, condimentum nulla in, varius dui.</p>
-    </div>
-    <div style="margin-top: 50px;" class="h2Container">
-      <a href="about.html">
-        <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">Läs mer om oss här.</h2>
-      </a>
-    </div>
-
-
-    <!-- <div class="left">
-
-    </div>
-    <div class="right">
-
-    </div> -->
-  </div>
-  <div class="skew-c"></div>
-  <div class="topBtm-block topBtm-block-produkter">
-
-    <div style="margin-bottom: 20px;" class="h2Container">
-      <img class="arrow-text" src="images/drawnarrow-text-1.png" alt="">
-      <a href="products.html">
-        <h2 class="h2TextBlock">Våra Produkter.</h2>
-      </a>
-    </div>
-
-    <div class="row">
-      <div class="text-center col-lg-4">
-        <img style="" class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-        <!-- <svg class="text-center svgimg bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-        <h2>Äppelmust</h2>
-        <h3>Originalet</h3>
-        <p>Musten producerar vi själva, på handplockade vildvuxna äpplen från Sveriges trädgårdar som vi sedan försluter i glasflaskor på trettiotre centiliter.</p>
-        <p><a class="btn btn-danger" href="product-1.html" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="text-center col-lg-4">
-        <img class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-        <h2>Äppelmust</h2>
-        <h3>Med en touch av kanel</h3>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.Etiam porta sem malesuada magna mollis euismod.</p>
-        <p><a class="btn btn-danger" href="#" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="text-center col-lg-4">
-      <img class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-      <h2>Äppelmust</h2>
-      <h3>Originalet i bag-in-box</h3>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.Etiam porta sem malesuada magna mollis euismod.</p>
-        <p><a class="btn btn-danger" href="#" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
-  </div>
-  <div class="skew-cc"></div>
-
-
-
-
-
-
-
   <div class="footer">
     <ul class="ul-footer">
       <li id="foot-item-1" class="li-footer">
-        <a class="a-footer" href="https://sv-se.facebook.com/">
+        <a class="a-footer" href="https://sv-se.facebook.com/" target="_blank">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -147,7 +134,7 @@
         </a>
       </li>
       <li id="foot-item-2" class="li-footer">
-        <a class="a-footer" href="https://www.instagram.com/?hl=sv">
+        <a class="a-footer" href="https://www.instagram.com/itsamust.uf/" target="_blank">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -155,8 +142,9 @@
           <i class="fab fa-instagram" aria-hidden="true"></i>
         </a>
       </li>
+
       <li id="foot-item-3" class="li-footer">
-        <a class="a-footer" href="mailto: info.itsamust@gmail.com">
+        <a class="mailATag a-footer" href="mailto: info.itsamust@gmail.com">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -169,21 +157,13 @@
     <p class="text-footer adress">Wergelandsgatan 22, 168 48 Bromma</p>
 
   </div>
-  <!-- SCRIPTS -->
-  <!-- <button onclick="changePageTitle()">
-        Change Page Title
-  </button>
-  <script type="text/javascript">
-          function changePageTitle() {
-              newPageTitle = 'save the planet.';
-              document.title = newPageTitle;
-          }
-  </script> -->
 
-
+  <script src="script.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </body>
 
 </html>
