--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://api.playground.klarna.com/">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesAbout.css">
 </head>
 <body class="homeBody">
 
@@ -28,7 +29,7 @@
         <a href="about.html">OM OSS</a>
       </div>
     </div>
-    <span class="menuBtn" onclick="openNav()" data-fixed data-fixed-top="50" data-fixed-left="30">
+    <span style="z-index: 5;" class="menuBtn" onclick="openNav()" data-fixed data-fixed-top="50" data-fixed-left="30">
       <span class="menuLine1"></span>
       <span class="menuLine2"></span>
     </span>
@@ -55,90 +56,90 @@
       <span class="menuLine1"></span>
       <span class="menuLine2"></span>
     </a> -->
-    <div class="siteLogo">
-      <a href="#">
+    <div style="z-index: 100;" class="siteLogo">
+      <a href="index.html">
         <img class="logo" src="images/logotyp-D4.png" alt="site-logo">
       </a>
     </div>
   </nav>
-  <div class="skew-c-top"></div>
+  <!-- <div  class="skew-c-top"></div> -->
   <div class="topBtm-block top-block">
-    <p class="typewriterFont line anim-typewriter">save the fruit.</p>
-    <p class="typewriterFont line-2 anim-typewriter-2">save the planet.</p>
-    <a class="fade-in arrowBtn" href="#middle">
-      <img class="arrowImg" src="images/down-arrow.png" alt="">
-    </a>
+    <div style="margin-top: 60px;" class="intro-block">
+      <p class="typewriterFont line anim-typewriter">it's a must.</p>
+      <p class=" line-2 anim-typewriter-2">om oss.</p>
+    </div>
   </div>
+  <!-- PAGE CONTENT -->
+  <!-- <div class="skew-c"></div> -->
+  <div class="info-outer-container">
+    <div class="info-1 section-divider">
+      <div class="info-container">
+        <div class="info-background-2">
+          <h2>Vår affärsidé.</h2>
+          <h3 style="font-size: 18px;">Noll tillsatser av något slag. IT'S A MUST.</h3>
+          <p style="font-size: 15px;">Vi tror på att en äppelmust ska vara just en äppelmust. Inte en flaska med massa tillsatser för att efterlikna en smak av äpplen. En äppelmust ska vara en smak av naturen.</p>
+          <p style="font-size: 15px;">Därför är IT'S A MUSTs äppelmust gjord helt på vildvuxna äpplen från svenska trädgårdar.</p>
+          <p style="font-size: 15px;">Du kan dricka IT'S A MUSTs äppelmust med gott samvete med kunskapen av att vår must ör producerad på äpplen som annars hade gått förlorade denna säsong. Äpplen från din grannes vackra äppelträd som din granne inte haft tid eller varit intresserad av att plocka; och <b><a style="text-decoration: none; color: white;" href="#blåmärksfrukt">blåmärksfrukt</a></b> från dina lokala livsmedelsbutiker som annars skulle gått till spillo.</p>
+          <p style="font-size: 15px;">Så tacka din granne när du nästa gång öppnar en äppelmust från oss för den naturliga och underbart goda smak. Självklart ska du även ge dig själv beröm för att du precis bidragit till att minska matsvinnet i Sverige genom att ha utnyttjat din trogne grannes äpplen.</p>
+        </div>
+      </div>
+      <div class="info-container">
+        <div class="info-background">
+          <h2>Vår resa.</h2>
+          <p style="font-size: 16px;">
+            <em>Vi hade en dröm. En dröm där vi gjorde allt vi kunde för att minska fruktsvinnet. Vi är otroligt tacksamma och stolta över att kunna förverkliga den drömmen.
+          </em></p>
+          <br>
+          <p style="font-size: 15px;">Vi har samarbete med flertalet livsmedelsbutiker runt om i närområdet där vi får så kallad blåmärksfrukt. Vi har även plockat otroliga mängder räddad frukt från trädgårdar och äppelträd runt om i Västerort.</p>
+          <br>
+          <p style="font-size: 15px;">
+            Med frukten samlad omvandlade vi den till en läcker och oslagbart god äppelmust. Du har väl sett vår Limited Edition Julmust? Äppelmust med smak av kanel; otroligt god!!
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- 2ND ROW -->
+  <div class="info-outer-container-2">
+    <div class="info-1 section-divider">
+      <div class="info-container">
+        <div id="blåmärksfrukt" class="info-background">
+          <h2>Vad är blåmärksfrukt?</h2>
+          <p style="font-size: 15px;">Blåmärksfrukt är frukt som inte är tillräckligt bra för att sälja i livsmedelsbutiker. Ofta handlar det om att frukten är för ful, för böjd, för liten eller för stor eller har fått ett blåmärke. Denna typ av frukt är det sällan något egentligt fel på, men som livsmedelsbutiker inte kan sälja. Detta såg vi som en enorm möjlighet att kunna minska fruktsvinnet. </p>
+          <h2>Vad för priser har ni?</h2>
+          <h3 style="font-size: 18px;">Vi har mycket konkurrenskraftiga priser. </h3>
+          <p style="font-size: 15px;"><a href="product-1.html">Äppelmust - Originalet (33cl) : 22 kr</a></p>
+          <p style="font-size: 15px;"><a href="product-2.html">Äppelmust - med smak av kanel (33cl) : 25 kr</a></p>
+          <p style="font-size: 15px;"><a href="product-3.html">Bag in Box (300cl) : 99 kr</a></p>
+        </div>
+      </div>
+      <div class="info-container">
+        <div class="info-background-2">
+          <h2>Hur får jag tag på musten?</h2>
+          <p style="font-size: 15px;">För tillfället är inte vår webbshop uppe. Detta innebär att det enda sättet för dig att njuta av vår underbart goda äppelmust är antingen genom beställning via Instagram DM eller mejl.</p>
+          <br>
+          <h2>Kontakta oss.</h2>
+          <p style="font-size: 15px;">Har du något på hjärtat? Kanske undrar du hur vi kan ha så konkurrenskraftiga priser? Eller så kanske du undrar hur vi får till det lilla extra i vår must som skiljer oss från andra? Oavsett vad det gäller tveka inte att höra av dig!</p>
+          <p>E-post: <b><a style="text-decoration: none; color: white;" href="mailto: info.itsamust@gmail.com">itsamust.uf@gmail.com</a></b></p>
+          <p>Instagram: <b>@<a style="text-decoration: none; color: white;" href="https://www.instagram.com/itsamust.uf/" target="_blank">itsamust.uf</a></b></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+  <!-- FOOTER -->
   <div class="skew-cc"></div>
-  <div id="middle"  class="middle-block">
-    <div class="text-block fade-in">
-      <h3>
-        Vårat koncept.
-      </h3>
-      <p class="paragraph-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris velit lectus, porta id diam ac, feugiat interdum nisi. Pellentesque ut arcu eu lectus ultricies rhoncus et id justo. Suspendisse luctus molestie risus sit amet euismod. Nunc et leo quis est semper auctor. Nulla quis lectus ullamcorper ipsum rutrum blandit. Nam felis lorem, bibendum ut lectus ac, iaculis consectetur nisl. Aenean mi lorem, molestie id purus eu, feugiat vulputate est. Ut sed laoreet tortor. Proin sed augue vestibulum, condimentum nulla in, varius dui.</p>
-    </div>
-    <div style="margin-top: 50px;" class="h2Container">
-      <a href="about.html">
-        <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">Läs mer om oss här.</h2>
-      </a>
-    </div>
-
-
-    <!-- <div class="left">
-
-    </div>
-    <div class="right">
-
-    </div> -->
-  </div>
-  <div class="skew-c"></div>
-  <div class="topBtm-block topBtm-block-produkter">
-
-    <div style="margin-bottom: 20px;" class="h2Container">
-      <img class="arrow-text" src="images/drawnarrow-text-1.png" alt="">
-      <a href="products.html">
-        <h2 class="h2TextBlock">Våra Produkter.</h2>
-      </a>
-    </div>
-
-    <div class="row">
-      <div class="text-center col-lg-4">
-        <img style="" class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-        <!-- <svg class="text-center svgimg bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-        <h2>Äppelmust</h2>
-        <h3>Originalet</h3>
-        <p>Musten producerar vi själva, på handplockade vildvuxna äpplen från Sveriges trädgårdar som vi sedan försluter i glasflaskor på trettiotre centiliter.</p>
-        <p><a class="btn btn-danger" href="products/amust.html" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="text-center col-lg-4">
-        <img class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-        <h2>Äppelmust</h2>
-        <h3>Med en touch av kanel</h3>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.Etiam porta sem malesuada magna mollis euismod.</p>
-        <p><a class="btn btn-danger" href="#" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="text-center col-lg-4">
-      <img class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-      <h2>Äppelmust</h2>
-      <h3>Originalet i bag-in-box</h3>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.Etiam porta sem malesuada magna mollis euismod.</p>
-        <p><a class="btn btn-danger" href="#" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
-  </div>
-  <div class="skew-cc"></div>
-
-
-
-
-
-
-
   <div class="footer">
     <ul class="ul-footer">
       <li id="foot-item-1" class="li-footer">
-        <a class="a-footer" href="https://sv-se.facebook.com/">
+        <a class="a-footer" href="https://sv-se.facebook.com/" target="_blank">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -147,7 +148,7 @@
         </a>
       </li>
       <li id="foot-item-2" class="li-footer">
-        <a class="a-footer" href="https://www.instagram.com/?hl=sv">
+        <a class="a-footer" href="https://www.instagram.com/itsamust.uf/" target="_blank">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -155,8 +156,9 @@
           <i class="fab fa-instagram" aria-hidden="true"></i>
         </a>
       </li>
+
       <li id="foot-item-3" class="li-footer">
-        <a class="a-footer" href="mailto: info.itsamust@gmail.com">
+        <a class="mailATag a-footer" href="mailto: info.itsamust@gmail.com">
           <span class="span-footer"></span>
           <span class="span-footer"></span>
           <span class="span-footer"></span>
@@ -169,7 +171,6 @@
     <p class="text-footer adress">Wergelandsgatan 22, 168 48 Bromma</p>
 
   </div>
-  
   <!-- SCRIPTS -->
   <!-- <button onclick="changePageTitle()">
         Change Page Title
@@ -181,10 +182,12 @@
           }
   </script> -->
 
-
+  <script src="script.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </body>
 
 </html>
