--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://api.playground.klarna.com/">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/stylesAbout.css">
-
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsive.css">
 </head>
 <body class="homeBody">
 
@@ -72,7 +72,7 @@
   </div>
   <div class="skew-cc"></div>
     <div class="middle-block">
-      
+
     </div>
   <div class="skew-c"></div>
   <div class="topBtm-block">
