--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://api.playground.klarna.com/">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/stylesAbout.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsive.css">
 </head>
 <body class="homeBody">
 
