--- a/product-1.html
+++ b/product-1.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/stylesAbout.css">
   <link rel="stylesheet" type="text/css" href="css/styleProductsSpec.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsive.css">
 </head>
 <body class="homeBody">
   <nav style="z-index: 100;" class="navbarContainer">
