--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <body class="homeBody">
 
 
-  <nav class="navbarContainer">
+  <nav style="z-index: 100;" class="navbarContainer">
     <!--MENU START-->
     <div id="headNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -63,17 +63,20 @@
       </a>
     </div>
   </nav>
-  <!-- <div  class="skew-c-top"></div> -->
+  <div  class="skew-c-top"></div>
   <div class="topBtm-block top-block">
     <div style="margin-top: 60px;" class="intro-block">
-      <p class="typewriterFont line anim-typewriter">it's a must.</p>
+      <p class=" line anim-typewriter-3">it's a must.</p>
       <p class=" line-2 anim-typewriter-2">om oss.</p>
+      <!-- <a class="fade-in arrowBtn btn-danger" href="#middle">
+        <img class="arrowImg" src="images/down-arrow.png" alt="">
+      </a> -->
     </div>
   </div>
   <!-- PAGE CONTENT -->
-  <!-- <div class="skew-c"></div> -->
+  <div style="z-index: 10;" class="skew-cc"></div>
   <div class="info-outer-container">
-    <div class="info-1 section-divider">
+    <div class="info-1">
       <div class="info-container">
         <div class="info-background-2">
           <h2>Vår affärsidé.</h2>
@@ -96,27 +99,33 @@
           <p style="font-size: 15px;">
             Med frukten samlad omvandlade vi den till en läcker och oslagbart god äppelmust. Du har väl sett vår Limited Edition Julmust? Äppelmust med smak av kanel; otroligt god!!
           </p>
+
+          <h2>Våra samarbetspartners.</h2>
+          <p style="font-size: 15px;">Vi får självklart inte glömma att tacka vår underbara samarbetspartner; Humlegårdens Ekolager, som har sponsrat och hjälpt oss igenom denna resa. Utan dem skulle det inte vara möjligt.</p>
+          <p style="font-size: 15px;">Vi vill självklart också tacka alla andra samarbetspartners, livsmedelsbutiker och äppeldonatorer som vi inte kunnat klara oss utan i denna resa.</p>
         </div>
       </div>
     </div>
   </div>
+  <!--  -->
+  <div style="z-index: 10;" class="skew-c"></div>
   <!-- 2ND ROW -->
   <div class="info-outer-container-2">
-    <div class="info-1 section-divider">
+    <div id="tagpåmust" class="info-1">
       <div class="info-container">
         <div id="blåmärksfrukt" class="info-background">
           <h2>Vad är blåmärksfrukt?</h2>
           <p style="font-size: 15px;">Blåmärksfrukt är frukt som inte är tillräckligt bra för att sälja i livsmedelsbutiker. Ofta handlar det om att frukten är för ful, för böjd, för liten eller för stor eller har fått ett blåmärke. Denna typ av frukt är det sällan något egentligt fel på, men som livsmedelsbutiker inte kan sälja. Detta såg vi som en enorm möjlighet att kunna minska fruktsvinnet. </p>
           <h2>Vad för priser har ni?</h2>
           <h3 style="font-size: 18px;">Vi har mycket konkurrenskraftiga priser. </h3>
-          <p style="font-size: 15px;"><a href="product-1.html">Äppelmust - Originalet (33cl) : 22 kr</a></p>
-          <p style="font-size: 15px;"><a href="product-2.html">Äppelmust - med smak av kanel (33cl) : 25 kr</a></p>
-          <p style="font-size: 15px;"><a href="product-3.html">Bag in Box (300cl) : 99 kr</a></p>
+          <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-1.html">Äppelmust - Originalet (33cl) : 22 kr</a></p>
+          <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-2.html">Äppelmust - med smak av kanel (33cl) : 25 kr</a></p>
+          <p style="font-size: 15px;"><a style="text-decoration: none; color: black;" href="product-3.html">Bag in Box (300cl) : 99 kr</a></p>
         </div>
       </div>
       <div class="info-container">
         <div class="info-background-2">
-          <h2>Hur får jag tag på musten?</h2>
+          <h2 >Hur får jag tag på musten?</h2>
           <p style="font-size: 15px;">För tillfället är inte vår webbshop uppe. Detta innebär att det enda sättet för dig att njuta av vår underbart goda äppelmust är antingen genom beställning via Instagram DM eller mejl.</p>
           <br>
           <h2>Kontakta oss.</h2>
