--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
     </div>
   </nav>
   <div style="visibility: hidden;" class="skew-c-top"></div>
-  <div class="topBtm-block top-block">
+  <div class=" top-block">
     <div style="margin-top: 60px;" class="intro-block">
-      <p class="typewriterFont line anim-typewriter">save the fruit.</p>
-      <p class=" line-2 anim-typewriter-2">save the planet.</p>
+      <p class=" line anim-typewriter-3">it's a must.</p>
+      <p class=" line-2 anim-typewriter-2">hem.</p>
       <!-- <a class="fade-in arrowBtn btn-danger" href="#middle">
         <img class="arrowImg" src="images/down-arrow.png" alt="">
       </a> -->
@@ -99,10 +99,10 @@
   <div class="skew-c"></div>
   <div class="topBtm-block topBtm-block-produkter">
 
-    <div style="margin-bottom: 50px;margin-left:0; padding-left: 0;" class="h2Container">
+    <div style="margin-bottom: 30px;" class="h2Container">
       <img class="arrow-text" src="images/drawnarrow-text-1.png" alt="">
       <a href="products.html">
-        <h2 class="h2TextBlock">Våra Produkter.</h2>
+        <h2 class="h2TextBlock">Våra Produkter</h2>
       </a>
     </div>
 
