--- a/product-1.html
+++ b/product-1.html
@@ -12,11 +12,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://api.playground.klarna.com/">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/stylesAbout.css">
   <link rel="stylesheet" type="text/css" href="css/styleProductsSpec.css">
   <link rel="stylesheet" type="text/css" href="css/stylesResponsive.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsiveProducts.css">
+
+
 </head>
 <body class="homeBody">
+
+
   <nav style="z-index: 100;" class="navbarContainer">
     <!--MENU START-->
     <div id="headNav" class="overlay">
@@ -29,7 +33,7 @@
         <a href="about.html">OM OSS</a>
       </div>
     </div>
-    <span class="menuBtn" onclick="openNav()" data-fixed data-fixed-top="50" data-fixed-left="30">
+    <span style="z-index: 5;" class="menuBtn" onclick="openNav()" data-fixed data-fixed-top="50" data-fixed-left="30">
       <span class="menuLine1"></span>
       <span class="menuLine2"></span>
     </span>
@@ -56,26 +60,18 @@
       <span class="menuLine1"></span>
       <span class="menuLine2"></span>
     </a> -->
-    <div class="siteLogo">
+    <div style="z-index: 100;" class="siteLogo">
       <a href="index.html">
         <img class="logo" src="images/logotyp-D4.png" alt="site-logo">
       </a>
     </div>
   </nav>
-  <!-- CONTENT -->
   <div  class="skew-c-top"></div>
   <div class="topBtm-block top-block">
     <div class="info-outer-container">
-      <div style="padding-bottom: 400px;" class="info-1 ">
+      <div class="info-1 ">
         <div class="info-container">
-          <header style="" class="">
-            <div class="">
-              <nav class="nav nav-masthead justify-content-center">
-                <a class="text-secondary nav-link" href="products.html"><em>⤺ Tillbaka</em></a>
-              </nav>
-            </div>
-          </header>
-          <div style="padding-bottom: 0; padding-top: 15px;" class="info-background-2">
+          <div class="info-background-2">
             <img class="product-image" src="images/etikettharmoniskuf.png" alt="">
           </div>
           <div class="product-info">
