--- a/product-2COPY.html
+++ b/product-2COPY.html
@@ -12,9 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://api.playground.klarna.com/">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/stylesAbout.css">
-  <link rel="stylesheet" type="text/css" href="css/stylesProducts.css">
-  <link rel="stylesheet" type="text/css" href="css/stylesResponsive.css">
+  <link rel="stylesheet" type="text/css" href="css/styleProductsSpec.css">
 </head>
 <body class="homeBody">
 
@@ -64,65 +62,58 @@
       </a>
     </div>
   </nav>
-
-
-  <div class="skew-c-top"></div>
-  <div class=" topBlock">
-    <div style="margin-top: 60px;" class="intro-block">
-      <p class=" line anim-typewriter-3">it's a must.</p>
-      <p class=" line-2 anim-typewriter-2">våra produkter.</p>
-      <!-- <a class="fade-in arrowBtn btn-danger" href="#middle">
-        <img class="arrowImg" src="images/down-arrow.png" alt="">
-      </a> -->
-    </div>
-  <div class="skew-cc"></div>
-    <div class="middle-block">
-      <div style="margin-bottom: 30px;" class="h2Container">
-        <h2 class="h2TextBlock-static">Våra kläder</h2>
+  <div  class="skew-c-top"></div>
+  <div class="topBtm-block top-block">
+    <div class="info-outer-container">
+      <div class="info-1 ">
+        <div class="info-container">
+          <div class="info-background-2">
+            <img style="animation: fadeIn ease 0.7s;" class="product-image" src="images/mustjultema.jpg" alt="">
+          </div>
+          <div style="animation: fadeIn ease 1.5s;" class="product-info">
+            <header class="masthead mt-auto">
+              <div class="inner">
+                <nav class="nav nav-masthead justify-content-center">
+                  <p class="text-secondary nav-link active"><b><em>33cl flaska</em></b></p>
+                  <p class="text-secondary nav-link"><b>/</b></p>
+                  <p class="text-secondary nav-link "><b><em>100% räddad frukt</em></b></p>
+                </nav>
+              </div>
+            </header>
+            <header class="masthead mt-auto">
+              <div class="inner">
+                <nav class="nav nav-masthead justify-content-center">
+                  <a class="text-secondary nav-link active" href="product-1.html">Originalet</a>
+                  <p class="text-secondary nav-link"><b>/</b></p>
+                  <a class="text-secondary nav-link" href="#"><b>Juledition</b></a>
+                  <p class="text-secondary nav-link"><b>/</b></p>
+                  <a class="text-secondary nav-link" href="product-3.html">Bag-in-box</a>
+                </nav>
+              </div>
+            </header>
+          </div>
+        </div>
+        <div class="info-container">
+          <div style="animation: fadeIn ease 1.2s;" class="info-background">
+            <h2>Äppelmust Kanel</h2>
+            <h3 style="font-size: 18px;">Frisk smak av äpple med inslag av kanel.</h3>
+            <br>
+            <p style="font-size: 15px;">Om du vill avnjuta en smarkrik dryck med smak av jul och vinter är denna produkt perfekt för dig. Äppelmusten är gjord 100% räddad frukt med inslag av kanel. Kanelen ger en ljuvlig julkänsla och tillsammans med äpplen bildar det en oemotståndlig kombination.</p>
+            <p style="font-size: 15px;">Du kan dricka denna underbart goda must med mycket gott samvete med kunskapen om att du hjälper till att minska fruktsvinnet.</p>
+            <br>
+            <div style="margin-top: 50px; animation: fadeIn ease 1.5s;" class=" h2Container-läsmer">
+              <div class="h2TextContainer">
+                <a href="about.html">
+                  <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">KÖP</h2>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="row">
-        <div style="margin: auto; width: 400px;" class="text-center col-lg-4">
-          <img style="" class="productimage rounded-circle mx-auto" src="images/question.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="">
-          <img style="" class="productimage-2 rounded-circle mx-auto" src="images/question-black.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="">
-          <h2>IT'S A MUST</h2>
-          <h3>MERCH</h3>
-          <p>Att ha vår merch är bara ett måste.</p>
-          <p>KOMMER SNART!</p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
     </div>
-  <div class="skew-c"></div>
-  <div class="topBtm-block topBtm-block-produkter">
-    <div style="margin-bottom: 30px; margin-top: 100px;" class="h2Container2 h2Container">
-      <h2 class="h2TextBlock-static">Våra drycker</h2>
-    </div>
-    <div class="row">
-      <div class="text-center col-lg-4">
-        <img style="" class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-        <!-- <svg class="text-center svgimg bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg> -->
-        <h2>Äppelmust</h2>
-        <h3>Originalet</h3>
-        <p>Musten producerar vi själva, på handplockade vildvuxna äpplen från Sveriges trädgårdar som vi sedan försluter i glasflaskor på trettiotre centiliter.</p>
-        <p><a class="merInfoBtn-produkt btn btn-danger" href="product-1.html" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="text-center col-lg-4">
-        <img class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-        <h2>Äppelmust</h2>
-        <h3>Med en touch av kanel</h3>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.Etiam porta sem malesuada magna mollis euismod.</p>
-        <p><a class="merInfoBtn-produkt btn btn-danger" href="product-2.html" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="text-center col-lg-4">
-      <img class="rounded-circle mx-auto" src="images/apple.png" width="140" height="auto" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140" alt="lemonadflaska">
-      <h2>Äppelmust</h2>
-      <h3>Originalet i bag-in-box</h3>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.Etiam porta sem malesuada magna mollis euismod.</p>
-        <p><a class="merInfoBtn-produkt btn btn-danger" href="product-3.html" role="button">Mer information &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
   </div>
-  <!-- FOOTER -->
+
   <div class="skew-cc"></div>
   <div class="footer">
     <ul class="ul-footer">
@@ -159,22 +150,13 @@
     <p class="text-footer adress">Wergelandsgatan 22, 168 48 Bromma</p>
 
   </div>
-  <!-- SCRIPTS -->
-  <!-- <button onclick="changePageTitle()">
-        Change Page Title
-  </button>
-  <script type="text/javascript">
-          function changePageTitle() {
-              newPageTitle = 'save the planet.';
-              document.title = newPageTitle;
-          }
-  </script> -->
 
   <script src="script.js" charset="utf-8"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </body>
 
 </html>
