--- a/product-3.html
+++ b/product-3.html
@@ -13,6 +13,10 @@
   <link rel="stylesheet" href="https://api.playground.klarna.com/">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/styleProductsSpec.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsive.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsiveProducts.css">
+
+
 </head>
 <body class="homeBody">
 
