--- a/product-2.html
+++ b/product-2.html
@@ -13,6 +13,10 @@
   <link rel="stylesheet" href="https://api.playground.klarna.com/">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" type="text/css" href="css/styleProductsSpec.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsive.css">
+  <link rel="stylesheet" type="text/css" href="css/stylesResponsiveProducts.css">
+
+
 </head>
 <body class="homeBody">
 
@@ -68,9 +72,9 @@
       <div class="info-1 ">
         <div class="info-container">
           <div class="info-background-2">
-            <img style="animation: fadeIn ease 0.7s;" class="product-image" src="images/mustjultema.jpg" alt="">
+            <img class="product-image" src="images/mustjultema.jpg" alt="">
           </div>
-          <div style="animation: fadeIn ease 1.5s;" class="product-info">
+          <div class="product-info">
             <header class="masthead mt-auto">
               <div class="inner">
                 <nav class="nav nav-masthead justify-content-center">
@@ -94,14 +98,14 @@
           </div>
         </div>
         <div class="info-container">
-          <div style="animation: fadeIn ease 1.2s;" class="info-background">
+          <div class="info-background">
             <h2>Äppelmust Kanel</h2>
             <h3 style="font-size: 18px;">Frisk smak av äpple med inslag av kanel.</h3>
             <br>
             <p style="font-size: 15px;">Om du vill avnjuta en smarkrik dryck med smak av jul och vinter är denna produkt perfekt för dig. Äppelmusten är gjord 100% räddad frukt med inslag av kanel. Kanelen ger en ljuvlig julkänsla och tillsammans med äpplen bildar det en oemotståndlig kombination.</p>
             <p style="font-size: 15px;">Du kan dricka denna underbart goda must med mycket gott samvete med kunskapen om att du hjälper till att minska fruktsvinnet.</p>
             <br>
-            <div style="margin-top: 50px; animation: fadeIn ease 1.5s;" class=" h2Container-läsmer">
+            <div style="margin-top: 50px; " class="fade-in h2Container-läsmer">
               <div class="h2TextContainer">
                 <a href="about.html">
                   <h2 style="font-size: 20px; width: 200px;" class="h2TextBlock h2TextBlock-läsmer">KÖP</h2>
